# users_service

./: Dockerfile  docker-compose.yaml  env-example  pyproject.toml
.circleci/: config.yml
app/: config.py  database.py  dependencies.py  exceptions.py  initiator.py  main.py  producer.py  request_utils.py  test_main.py
app/auth/: routes.py  schemas.py  service.py  utils.py
app/auth/protocols/: service.py
app/common/: config.py  database.py  dependencies.py  exceptions.py
app/config/: constants.py
app/dtos/: responses.py  user.py
app/repositories/: base_repository.py  database.py  models.py  schemas.py
app/routers/: user_routes.py
app/services/: user_service.py
app/tests/: conftest.py  test_e2e.py  test_main.py
app/users/: base_repository.py  models.py  repository.py  routes.py  schemas.py  service.py  user_repository.py  user_routes.py  user_service.py
app/users/protocols/: repository.py  service.py
db/: init.sql
tests/: conftest.py  test_e2e.py
