[tool.poetry]
name = "users-service"
version = "0.1.0"
description = ""
authors = ["axdbertuol <axdber@gmail.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
httpx = "^0.27.0"
pytest = "^8.2.0"
sqlalchemy = "^2.0.30"
pytest-asyncio = "^0.23.6"
psycopg2-binary = "^2.9.9"
pydantic-settings = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
