[tool.poetry]
name = "users-service"
version = "0.1.0"
description = ""
authors = ["axdbertuol <axdber@gmail.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
sqlalchemy = "^2.0.30"
psycopg2-binary = "^2.9.9"
pydantic-settings = "^2.2.1"
email-validator = "^2.1.1"
xeez-pyutils = { git = "https://github.com/axdbertuol/xeez-pyutils.git", rev = "69498e78750f593016d9e00ad89a90bd6b138c37" }
aiokafka = "^0.10.0"
bcrypt = "^4.1.3"
aiohttp = "^3.9.5"
passlib = "^1.7.4"
pyjwt = "^2.8.0"
svix-ksuid = "^0.6.2"
types-passlib = "^1.7.7.20240327"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-mock = "*"
httpx = "^0.27.0"
mypy = "^1.10.0"
asgi-lifespan = "==2.*"
pytest-asyncio = "^0.23.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
plugins = [
  "pydantic.mypy"
]

follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true

# for strict mypy: (this is the tricky one :-))
# disallow_untyped_defs = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
asyncio_mode = "auto"